src/objects/Poker_Hand__c.object
<CustomObject>
    <description>Related to a game of poker. Each game of poker is made up of multiple hands, which would typically be user stories.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this the currently active user story that players are estimating?</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Estimates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if players can update or cast estimates for this hand.</description>
        <label>Allow Estimates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Estimate__c</fullName>
        <description>The final estimate, either calculated from all player&apos;s estimates or overridden by the game master.</description>
        <label>Final Estimate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Poker_Game__c</fullName>
        <description>Poker game that the current hand (user story) belongs to.</description>
        <label>Poker Game</label>
        <referenceTo>Poker_Game__c</referenceTo>
        <relationshipLabel>Poker Hands</relationshipLabel>
        <relationshipName>Poker_Hands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Poker Hand</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poker Hands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>